# transitkit

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  api_reference.html  app.py  changelog.html  customize.py  development.html  docker-compose.yml  dockerfile  download_code.py  environment.yml  from setuptools import setup, find_packages.py  genindex.html  getting_started.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements-optional.txt  requirements.txt  search.html  searchindex.js  setup.cfg  streamlit_app.py  test_nea.py  (+4 more)
.doctrees/: api_reference.doctree  changelog.doctree  development.doctree  getting_started.doctree  index.doctree  installation.doctree  tutorials.doctree  user_guide.doctree
.doctrees/api/: analysis.doctree  core.doctree  index.doctree  io.doctree  validation.doctree  visualization.doctree
.doctrees/nbsphinx/tutorials/: 01_quick_start.ipynb
.doctrees/tutorials/: 01_quick_start.doctree  index.doctree  multi_method.doctree  publication_plots.doctree  quick_start.doctree  synthetic_transits.doctree  ttv_analysis.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  docs.yml  publish.yml  release.yml  test.yml  tests.yml
.streamlit/: config.toml
_modules/: index.html
_modules/transitkit/: analysis.html  core.html  io.html  validation.html  visualization.html
analysis/: advanced.py
api/: analysis.html  core.html  index.html  io.html  validation.html  visualization.html
benchmarks/: benchmark_fitting.py  benchmark_loading.py
binder/: environment.yml  postBuild  start
conda.recipe/: meta.yaml
core/models/: transit.py
data/: pipeline.py
docker/development/: Dockerfile
docker/gpu/: Dockerfile
docker/production/: Dockerfile
docs/: Makefile  _config.yml  api_reference.rst  conf.py  development.rst  getting_started.rst  index.md  index.rst  requirements.txt  tutorials.rst  user_guide.rst
docs/_static/: custom.css
examples/: 01_quick_start.ipynb  02_tess_data.ipynb  02_transit_fitting.ipynb  03_advanced_analysis.ipynb  03_multi_method_detection.ipynb  04_batch_processing.ipynb  04_ttv_analysis.ipynb  05_custom_plugins.ipynb  05_publication_plots.ipynb  06_validation_tests.ipynb  quick_start.py  universal_demo.ipynb
fitting/: fitters.py
scripts/: build_docs.sh  build_executables.bat  build_executables.sh  deploy.sh  release.sh  setup_env.sh  transitkit.nsi
src/fastapi/: __init__.py  testclient.py
src/transitkit/: FIXES.md  __init__.py  __version__.py  analysis.py  cli.py  config.py  core.py  gui_app.py  io.py  transit.py  utils.py  validation.py  version.py  visualization.py
src/transitkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/transitkit/api/: __init__.py  main.py
src/transitkit/core/: __init__.py  exceptions.py  models.py
src/transitkit/data/: __init__.py  pipeline.py
src/transitkit/fitting/: __init__.py  fitters.py
src/transitkit/frontend/: __init__.py
src/transitkit/missions/: __init__.py  downloader.py
src/transitkit/ml/: __init__.py  detection.py
src/transitkit/optimization/: __init__.py  accelerated.py
src/transitkit/plugins/: __init__.py
src/transitkit/publication/: __init__.py  generator.py
src/transitkit/spectroscopy/: __init__.py  jwst.py
src/transitkit/universal/: __init__.py  resolver.py
src/transitkit/viz/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_basic.py  test_cli.py  test_core.py  test_data.py  test_fitting.py  test_transit.py  test_viz.py
tests/integration/: __init__.py
tutorials/: 01_quick_start.html  index.html  multi_method.html  publication_plots.html  quick_start.html  synthetic_transits.html  ttv_analysis.html
