[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transitkit"
version = "2.0.0"
description = "Professional Exoplanet Transit Light Curve Analysis Toolkit"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arif Solmaz", email = "arif.solmaz@gmail.com"}
]
maintainers = [
    {name = "Arif Solmaz", email = "arif.solmaz@gmail.com"}
]
keywords = [
    "exoplanet",
    "transit",
    "photometry",
    "astronomy",
    "astrophysics",
    "TESS",
    "Kepler",
    "light-curve",
    "BLS",
    "TTV",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.8",
    "matplotlib>=3.5",
    "astropy>=5.1",
    "lightkurve>=2.3",
    "pandas>=1.4",
    "scikit-learn>=1.0",
    "h5py>=3.6",
]

[project.optional-dependencies]
mcmc = [
    "emcee>=3.1",
    "corner>=2.2",
]
cli = [
    "click>=8.0",
    "rich>=12.0",
]
gui = [
    "emcee>=3.1",
    "corner>=2.2",
]
all = [
    "emcee>=3.1",
    "corner>=2.2",
    "click>=8.0",
    "rich>=12.0",
    "batman-package>=2.4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "myst-parser>=1.0",
    "nbsphinx>=0.9",
]

[project.urls]
Homepage = "https://github.com/arifsolmaz/transitkit"
Documentation = "https://transitkit.readthedocs.io"
Repository = "https://github.com/arifsolmaz/transitkit"
Issues = "https://github.com/arifsolmaz/transitkit/issues"
Changelog = "https://github.com/arifsolmaz/transitkit/blob/main/CHANGELOG.md"

[project.scripts]
transitkit = "transitkit.cli:main"

[project.gui-scripts]
transitkit-gui = "transitkit.gui_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
transitkit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/transitkit"]
branch = true
omit = [
    "*/gui_app.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["transitkit"]
skip = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "gui_app.py",
    "tests/",
]
